// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`svelte/Field > renders correctly - Array 1`] = `
<div>
  <div
    id="field"
  >
    {"id":"path__0__to__field","path":"path.0.to.field","fields":[],"minItems":0,"modifiers":"success ","isActive":true,"maxItems":null,"variables":{"var":"value"},"userInputs":{"test":"ok"},"label":null,"helper":null,"allowedPatterns":[],"addButtonProps":{},"removeButtonProps":{},"addTextfieldProps":{},"type":"array","value":null,"customComponents":{}}
  </div>
  <!--&lt;NestedFields&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Array 2`] = `
<div>
  <div
    id="field"
  >
    {"id":"path__0__to__field","path":"path.0.to.field","fields":[],"minItems":0,"modifiers":"success ","isActive":false,"maxItems":null,"variables":{"var":"value"},"userInputs":{"test":"ok"},"label":null,"helper":null,"allowedPatterns":[],"addButtonProps":{"label":"TRANSLATED LABEL"},"removeButtonProps":{"label":"TRANSLATED LABEL"},"addTextfieldProps":{},"type":"array","value":null,"customComponents":{}}
  </div>
  <!--&lt;NestedFields&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Button 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path__0__to__field
     
    undefined
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - DatePicker 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    100
     
    path__0__to__field
     
    false
     
    success 
     
    function
     
    10
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - DatePicker 2`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    2022/07/07
     
    TRANSLATED LABEL
     
    undefined
     
    10
     
    path__0__to__field
     
    false
     
    success 
     
    function
     
    10
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - DynamicObject 1`] = `
<div>
  <div
    id="field"
  >
    {"id":"path__0__to__field","path":"path.0.to.field","fields":[],"minItems":0,"modifiers":"success ","isActive":true,"maxItems":null,"variables":{"var":"value"},"userInputs":{"test":"ok"},"label":null,"helper":null,"allowedPatterns":[],"addButtonProps":{},"removeButtonProps":{},"addTextfieldProps":{},"type":"dynamicObject","value":null,"customComponents":{}}
  </div>
  <!--&lt;NestedFields&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - DynamicObject 2`] = `
<div>
  <div
    id="field"
  >
    {"id":"path__0__to__field","path":"path.0.to.field","fields":[],"minItems":0,"modifiers":"success ","isActive":true,"maxItems":null,"variables":{"var":"value"},"userInputs":{"test":"ok"},"label":null,"helper":null,"allowedPatterns":[],"addButtonProps":{},"removeButtonProps":{},"addTextfieldProps":{"label":"TRANSLATED LABEL","placeholder":"TRANSLATED LABEL"},"type":"dynamicObject","value":null,"customComponents":{}}
  </div>
  <!--&lt;NestedFields&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - FilePicker 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path__0__to__field
     
    false
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - FilePicker 2`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    undefined
     
    TRANSLATED LABEL
     
    undefined
     
    undefined
     
    path__0__to__field
     
    false
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Link 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path__0__to__field
     
    undefined
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Message with label and helper 1`] = `
<div>
  <div
    id="field"
  >
    {"id":"path__0__to__field","label":"TRANSLATED LABEL","modifiers":"success "}
  </div>
  <!--&lt;Message&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Message with label and message 1`] = `
<div>
  <div
    id="field"
  >
    {"id":"path__0__to__field","label":"TRANSLATED LABEL","modifiers":"success "}
  </div>
  <!--&lt;Message&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Options 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path__0__to__field
     
    undefined
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    [object Object],[object Object],[object Object]
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Textarea 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    100
     
    path__0__to__field
     
    false
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Textarea 2`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    test
     
    TRANSLATED LABEL
     
    undefined
     
    10
     
    path__0__to__field
     
    false
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Textfield 1`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    100
     
    path__0__to__field
     
    false
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Textfield 2`] = `
<div>
  <div>
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    path.0.to.field
     
    undefined
     
    test
     
    TRANSLATED LABEL
     
    undefined
     
    10
     
    path__0__to__field
     
    false
     
    success 
     
    undefined
     
    undefined
     
    focusedValue =&gt; {
		$$invalidate(2, isActive = true);

		if (field.componentProps['on:focus'] !== undefined) {
			field.componentProps['on:focus'](focusedValue);
		}
	}
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
     
    undefined
  </div>
  <!--&lt;GenericComponent&gt;-->
  
  
  <!--&lt;Field&gt;-->
</div>
`;

exports[`svelte/Field > renders correctly - Unknown component 1`] = `
<div>
  
  <!--&lt;Field&gt;-->
</div>
`;
